--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+
+  "ConnectionStrings": {
+    "DbConnection": "Host=localhost;Port=5433;Database=FileStorage;Username=postgres;Password=User1234",
+
+    "AllowedHosts": "*"
+  }
