add migration init

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,8 @@
   },
 
   "ConnectionStrings": {
-    "DbConnection": "Host=localhost;Port=5433;Database=FileStorage;Username=postgres;Password=User1234",
+    "DbConnection": "Host=localhost;Port=5433;Database=FileStorage;Username=postgres;Password=User1234"
+  },
 
     "AllowedHosts": "*"
   }
