--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,35 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  // настройка Serilog с помощью appsetting.json
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Information"
+      }
+    },
+    "Using": [ "Serilog.Sinks.Console" ],
+    "WriteTo": [
+      { "Name": "Console" }
+    ]
   }
 }
+
+  //
+  //"Serilog": {
+  //  "MinimumLevel": {
+  //    "Default": "Debug",
+  //    "Override": {
+  //      "Microsoft": "Information",
+  //      "System": "Information"
+  //    },
+  //    "Using": []
+  //  },
+  //  "WriteTo": [
+  //    {}
+  //  ]
+  //},
