add serilog loging

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,15 +1,79 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
+  //"Logging": {
+  //  "LogLevel": {
+  //    "Default": "Information",
+  //    "Microsoft.AspNetCore": "Warning",
+  //    "Microsoft.Hosting.Lifetime": "Information"
+  //  }
+  //},
 
   "ConnectionStrings": {
     "DbConnection": "Host=localhost;Port=5433;Database=FileStorage;Username=postgres;Password=User1234"
   },
 
-    "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Information",
+        "Microsoft.AspNetCore": "Information",
+        "System": "Information"
+      }
+    },
+    "Using": [ "Serilog.Sinks.Async", "Serilog.Enrichers.ClientInfo" ],
+    "Enrich": [ "WithClientIp" ],
+    "WriteTo": [
+      {
+        "Name": "Logger",
+        "Args": {
+          "configureLogger": {
+            "WriteTo": [
+              {
+                "Name": "File",
+                "Args": {
+                  "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fffzzz} [{Level:u3}] [{SourceContext}] [{ClientIp}] {Message:lj}{NewLine}{Exception}",
+                  "path": "Logs/access.txt",
+                  "rollingInterval": "Day",
+                  "fileSizeLimitBytes": 5242880
+                }
+              }
+            ],
+            "Filter": [
+              {
+                "Name": "ByIncludingOnly",
+                "Args": {
+                  "expression": "StartsWith(SourceContext, 'Microsoft.AspNetCore.Hosting.')"
+                }
+              }
+            ]
+          }
+        }
+      },
+      {
+        "Name": "Logger",
+        "Args": {
+          "configureLogger": {
+            "MinimumLevel": {
+              "Default": "Warning"
+            },
+            "WriteTo": [
+              {
+                "Name": "File",
+                "Args": {
+                  "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fffzzz} [{Level:u3}] [{SourceContext}] [{ClientIp}] {Message:lj}{NewLine}{Exception}",
+                  "path": "Logs/error.txt",
+                  "rollingInterval": "Day",
+                  "fileSizeLimitBytes": 5242880
+                }
+              }
+            ]
+          }
+        }
+      }
+    ]
   }
+
+
+}
