add swagger dont work

--- a/FileStorage.csproj
+++ b/FileStorage.csproj
@@ -23,4 +23,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.9.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Apis\V1\" />
+    <Folder Include="Apis\V2\" />
+  </ItemGroup>
+
 </Project>
